<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:background="@drawable/table"
    android:gravity="center">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newGameBtn"
        android:background="@drawable/button_with_state"
        android:text="@string/new_game_btn"
        android:onClick="newGameClick"
        android:textSize="40dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/joinGameBtn"
        android:background="@drawable/button_with_state"
        android:layout_below="@id/newGameBtn"
        android:text="@string/join_game_btn"
        android:onClick="joinGameClick"
        android:textSize="40dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutBtn"
        android:layout_below="@id/joinGameBtn"
        android:background="@drawable/button_with_state"
        android:onClick="aboutClick"
        android:layout_marginTop="10dp"
        android:text="@string/about_btn"
        android:textSize="40dp"/>
</RelativeLayout>
