<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group3.meyer_android.controller.DiceGameActivity"
    android:background="@drawable/table"
    android:gravity="center">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/ButtonFrame">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_small"
                android:id="@+id/nextBtn"
                android:text="@string/next_btn"
                android:textColor="@color/colorBlack"
                android:textSize="40dp"
                android:onClick="nextBtnClick"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_small"
                android:id="@+id/turnBtn"
                android:layout_toRightOf="@id/nextBtn"
                android:layout_marginLeft="10dp"
                android:text="@string/turn_btn"
                android:textColor="@color/colorBlack"
                android:textSize="40dp"
                android:onClick="turnBtnClick"/>
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/DieFrame"
        android:layout_below="@id/ButtonFrame"
        android:paddingTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/die_01"
                android:id="@+id/dieLeftImageView" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/die_02"
                android:id="@+id/dieRightImageView"
                android:layout_toRightOf="@id/dieLeftImageView"
                android:paddingLeft="10dp"/>
        </RelativeLayout>
    </FrameLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@id/DieFrame"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/rollBtn"
        android:text="@string/roll_btn"
        android:textColor="@color/colorBlack"
        android:textSize="40dp"
        android:onClick="rollBtnClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@id/rollBtn"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/hideBtn"
        android:text="@string/hide_btn_hide"
        android:textColor="@color/colorBlack"
        android:textSize="40dp"
        android:onClick="hideBtnClick"/>


</RelativeLayout>
